--- a/src/js/views/dashboard.html
+++ b/src/js/views/dashboard.html
@@ -20,7 +20,7 @@
 		<br />
 		<br /><br />
 		<!-- A simple form is used to add a new department record. -->
-		<div id="addMovie" class="oj-form-layout">
+		<div id="addMovie" class="oj-form-layout" style="display: none;">
 			<div id="quickUpdate" class="oj-form oj-sm-odd-cols-12 oj-md-odd-cols-4 oj-md-labels-inline">
 				<h3>Add New Movie</h3>
 				<hr />
