--- a/src/js/views/dashboard.html
+++ b/src/js/views/dashboard.html
@@ -14,14 +14,14 @@
 					 {"headerText": "Up Vote",
 					 "field": "goodCount", "sortable": "enabled"},
 					 {"headerText": "Down Vote",
-					 "field": "badCount", "sortable": "enabled"}]' selectionMode='{"row": "none", "column": "none"}'
+					 "field": "badCount", "sortable": "enabled"}]'
 			row-renderer='[[oj.KnockoutTemplateUtils.getRenderer("row_tmpl", true)]]'>
 		</oj-table>
 		<br />
 		<br /><br />
 		<!-- A simple form is used to add a new department record. -->
-		<div id="addMovie" class="oj-form-layout" style="display: none;">
-			<div id="quickUpdate" class="oj-form oj-sm-odd-cols-12 oj-md-odd-cols-4 oj-md-labels-inline">
+		<oj-form-layout id="addMovie" max-columns='2' label-edge='start' label-width="50%" style="display: none;">
+			<!--<div id="quickUpdate" class="oj-form oj-sm-odd-cols-12 oj-md-odd-cols-4 oj-md-labels-inline">-->
 				<h3>Add New Movie</h3>
 				<hr />
 				<div class="oj-flex">
@@ -29,20 +29,20 @@
 						<oj-label for="newMovieName">Movie Name</oj-label>
 					</div>
 					<div class="oj-flex-item">
-						<oj-input-text id="newMovieName" maxlength='30' value="{{newMovieName}}"
+						<oj-input-text id="newMovieName" length.max='30' value="{{newMovieName}}"
 							placeholder="enter new name"></oj-input-text>
 						<oj-button id="saveBtn" on-click="[[addMovie]]">Add Movie</oj-button>
 					</div>
 				</div>
-			</div>
-		</div>
+			<!--</div>-->
+		</oj-form-layout>
 		<br />
 		<br />
 
 		<script type="text/html" id="row_tmpl">
 			<tr>
-			  	<td><div id='id' data-bind="text: id"></div></td>
-				<td><div id="name" data-bind="text: name"></div></td>
+			  	<td><oj-bind-text id='id' value="[[id]]"></oj-bind-text></td>
+				<td><oj-bind-text id="name" value="[[name]]"></oj-bind-text></td>
 				<td><oj-button id="upVoteBtn" data-bind="attr:{id: id}, click:function(id, event){$parent.upVote(id, event)}">
 					<span> 
 						<oj-bind-text value="[[goodCount]]"></oj-bind-text>
